--- a/app/src/main/res/layout/fragment_text_annotation.xml
+++ b/app/src/main/res/layout/fragment_text_annotation.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".textAnnotation.TextAnnotationFragment">
-
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/aaaa1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="50dp"
+        android:text="文本二" />
+    <TextView
+        android:id="@+id/aaaa2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="文本三" />
+    <TextView
+        android:id="@+id/aaaa3"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="文本四" />
+    <TextView
+        android:id="@+id/aaaa4"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="文本五" />
 
-</FrameLayout>
+</LinearLayout>
