--- a/app/src/main/res/layout/activity_text_annotation.xml
+++ b/app/src/main/res/layout/activity_text_annotation.xml
@@ -1,9 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".textAnnotation.TextAnnotationActivity">
+    <TextView
+        android:id="@+id/annotation1"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="第一个"
+        android:textColor="@color/red"
+        />
+    <EditText
+        android:id="@+id/annotation2"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="第二个"
+        android:textColor="@color/red"
+        android:layout_marginTop="5dp"
+        />
+    <ImageView
+        android:id="@+id/annotation3"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="5dp"
+        />
+    <TextView
+        android:id="@+id/annotation4"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="第四个"
+        android:textColor="@color/red"
+        android:layout_marginTop="5dp"
+        />
+    <TextView
+        android:id="@+id/annotation5"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="第五个"
+        android:textColor="@color/red"
+        android:layout_marginTop="5dp"
+        />
+    <TextView
+        android:id="@+id/annotation6"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="第六个"
+        android:textColor="@color/red"
+        android:layout_marginTop="5dp"
+        />
+    <FrameLayout
+        android:id="@+id/framelayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
