--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="Yellow">#FFFF00</color>
     <color name="Green">#00FF00</color>
     <color name="white">#FFFFFF</color>
+    <color name="white1">#eeFFFF</color>
 
 </resources>
