--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#118a7c</color>
+    <color name="colorPrimaryDark">#118a7c</color>
+    <color name="colorAccent">#118a7c</color>
 
     <color name="red">#FF0000</color>
     <color name="blue">#0000EE</color>
@@ -11,6 +11,6 @@
     <color name="Yellow">#FFFF00</color>
     <color name="Green">#00FF00</color>
     <color name="white">#FFFFFF</color>
-    <color name="white1">#eeFFFF</color>
+    <color name="white1">#fafbfb</color>
 
 </resources>
