--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -18,7 +18,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
-
+        <TextView
+            android:id="@+id/follow"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="弹窗跟随item"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/smart"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
