--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,10 @@
     <color name="black">#000000</color>
     <color name="Orange">#FFA500</color>
     <color name="Yellow">#FFFF00</color>
+    <color name="YellowAL">#44FFFF00</color>
     <color name="Green">#00FF00</color>
     <color name="white">#FFFFFF</color>
     <color name="white1">#fafbfb</color>
+    <color name="whait0">#FFFFFFFF</color>
 
 </resources>
