--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,4 +12,9 @@
         <attr name="finishProgress" format="integer"/>
     </declare-styleable>
 
+    <declare-styleable name="MovieView">
+        <attr name="android:src"/>
+        <attr name="android:title"/>
+        <attr name="android:adjustViewBounds"/>
+    </declare-styleable>
 </resources>
