--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".ui.main.fragment.main.MainFragment">
 
         <TextView
@@ -15,6 +16,22 @@
             android:text="闫文浩"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <com.example.mykotlin.view.AnnularProgressView
+            android:id="@+id/main_progress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/blue"
+            android:paddingLeft="3dp"
+            app:allProgress="100"
+            app:annularColor="@color/Yellow"
+            app:annularWidth="4dp"
+            app:finishProgress="90"
+            app:progressColor="@color/Orange"
+            app:progressTextSize="20sp"
+            app:synopsisText="巡检总数"
+            app:synopsisTextSize="12sp"
+            app:textColor="@color/white"
+            tools:ignore="MissingConstraints" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
