--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,9 @@
     <color name="white1">#fafbfb</color>
     <color name="whait0">#FFFFFFFF</color>
 
+    <color name="black6">#666666</color>
+    <color name="black34">#343434</color>
+    <color name="listBule">#1cb39c</color>
+    <color name="line_gray">#f4f4f4</color>
+
 </resources>
