--- a/app/src/main/res/layout/activity_fold2.xml
+++ b/app/src/main/res/layout/activity_fold2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,8 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:fitsSystemWindows="true"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            >
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/main_collapsing"
@@ -22,13 +22,13 @@
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                >
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/main_backdrop"
                         android:layout_width="match_parent"
@@ -36,8 +36,8 @@
                         android:fitsSystemWindows="true"
                         android:scaleType="centerCrop"
                         android:src="@mipmap/timg"
-                        app:layout_collapseMode="parallax"
-                        />
+                        app:layout_collapseMode="parallax" />
+
                     <ImageView
                         android:id="@+id/main_backdrp"
                         android:layout_width="match_parent"
@@ -45,29 +45,28 @@
                         android:fitsSystemWindows="true"
                         android:scaleType="centerCrop"
                         android:src="@mipmap/timg"
-                        app:layout_collapseMode="parallax"
-                        />
+                        app:layout_collapseMode="parallax" />
                 </LinearLayout>
+
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    app:title="是多少"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    />
+                    app:title="是多少" />
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="?attr/colorPrimary"
-                app:tabIndicatorColor="@color/colorAccent"
-                app:tabIndicatorHeight="4dp"
-                app:tabSelectedTextColor="#000"
-                app:tabTextColor="#fff"/>
+<!--            <com.google.android.material.tabs.TabLayout-->
+<!--                android:id="@+id/tabs"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentBottom="true"-->
+<!--                android:background="?attr/colorPrimary"-->
+<!--                app:tabIndicatorColor="@color/colorAccent"-->
+<!--                app:tabIndicatorHeight="4dp"-->
+<!--                app:tabSelectedTextColor="#000000"-->
+<!--                app:tabTextColor="#ffffff" />-->
         </com.google.android.material.appbar.AppBarLayout>
 
 
@@ -75,8 +74,8 @@
             android:id="@+id/nested"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            >
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -94,9 +93,9 @@
                     android:id="@+id/context_img2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:scaleType="centerInside"
                     android:src="@mipmap/snow"
-                    android:layout_marginTop="10dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/context_img1" />
             </androidx.constraintlayout.widget.ConstraintLayout>
