--- a/app/src/main/res/layout/activity_bottom_appbar.xml
+++ b/app/src/main/res/layout/activity_bottom_appbar.xml
@@ -8,6 +8,10 @@
         android:layout_height="match_parent"
         tools:context=".ui.bottomappbar.BottomAppbarActivity">
 
+        <com.example.mykotlin.view.MyClock
+            android:layout_width="300dp"
+            android:layout_height="300dp"/>
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
             android:layout_width="match_parent"
