--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -42,9 +42,13 @@
                 android:id="@+id/selectorView"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                app:lineStartSelectorColor="@color/red"
-                app:lineEndSelectorColor="@color/blue"
                 app:subsectionNum="7" />
+            <com.example.mykotlin.view.DrawView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
