--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="YellowAL">#44FFFF00</color>
     <color name="Green">#00FF00</color>
     <color name="white">#FFFFFF</color>
+    <color name="whitef">#FFFFFFFF</color>
     <color name="white1">#fafbfb</color>
     <color name="whait0">#FFFFFFFF</color>
 
